fixed some spacing and added books

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <nav>
     <a onclick="showSection('about');">About</a>
     <a onclick="showSection('blog');">Blogs</a>
-    <a href = "/knowledgebase" onclick="showSection('knowledgebase');">Knowledge</a>
+    <a onclick="showSection('knowledgebase');">Knowledge</a>
   </nav>
   <div class="content">
     <section id = "blog" class = "hidden">
@@ -71,6 +71,19 @@
           <div class="blogbox">
             <h1>Hi there! 👋</h1>
             <h2>This website hopes to keep some of my readings/learnings/thoughts in check for reflection and public readings (if anyone cares). It's a cool project to learn some web development anyway. In my freetime, I enjoy learning and trying out new things. In my freetime, I'm either trying to read more books, watching price actions of certain stocks, racking up my hours on Spotify, or making a cup of coffee.</h2>
+            <h1>Books I've Been Reading</h1>
+            <ul>
+                 <li>Introduction to Linear Algebra (Relearn relevant math concepts)</li>
+                 <li>Thinking, Fast and Slow (Better Decision Making)</li>
+                 <li>Statistical Thinking for the 21st Century (I find statistics interesting enough)</li>
+                 <li>Rich Dad Poor Dad (I enjoy philosophical books)</li>
+            </ul>
+            <h1>Books I'd Want To Read</h1>
+            <ul>
+                 <li>12 Rules for Life: An Antidote to Chaos(Peterson might be worth to read)</li>
+                 <li>Risk: A User's Guide(Better risk taker? Or end up taking more risk?)</li>
+                 <li>No Longer Human(Hmm)</li>
+          </ul>
             <h1 id = "secondary">Don't know what to put here just yet. Maybe a few projects to showcase if I bother to make them? Maybe a browser game because this website is so boring.</h1>
           </div>
         </div>
