--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Blog 3</title>
+<title></title>
 </head>
 <body>
 
-<h1>New Blog Title for Blog 3</h1>
-<h2>New Summary for Blog 3</h2>
-<p>This is the content of Blog 3. It can contain text, images, links, etc.</p>
+<h1></h1>
+<h2></h2>
+<p></p>
 
 </body>
 </html>
