Memory for blogs, import blogs from pages, make transitions and display blogs

--- a/index.html
+++ b/index.html
@@ -42,23 +42,30 @@
   <div class="content">
     <section id = "blog" class = "hidden">
       <div class="blogcontainer">
+        <section id = "one" class = "active">
         <div class="blogbox blog1">
           <h1></h1>
           <h2></h2>
           <p></p>
+          <button class = "read" onclick="specificBlog('one', 1, 'blog1')"> Read More </button>
         </div>
-        
+        </section>
+        <section id = "two" class = "active">
         <div class="blogbox blog2">
           <h1></h1>
           <h2></h2>
           <p></p>
+          <button class = "read" onclick="specificBlog('two', 2, 'blog2')"> Read More </button>
         </div>
-        
+        </section>
+        <section id = "three" class = "active">
         <div class="blogbox blog3">
           <h1></h1>
           <h2></h2>
           <p></p>
+          <button class = "read" onclick="specificBlog('three', 3, 'blog3')"> Read More </button>
         </div>
+        </section>
       </div>
     </section>
     <section id = "knowledgebase"  class = "hidden">
