fixed memory states, aligning, button reactions

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h1></h1>
           <h2></h2>
           <p></p>
-          <button class = "read" onclick="specificBlog('one', 1, 'blog1')"> Read More </button>
+          <button class = "active" onclick="specificBlog('one', 1, 'blog1')"> Read More </button>
         </div>
         </section>
         <section id = "two" class = "active">
@@ -55,7 +55,7 @@
           <h1></h1>
           <h2></h2>
           <p></p>
-          <button class = "read" onclick="specificBlog('two', 2, 'blog2')"> Read More </button>
+          <button class = "active" onclick="specificBlog('two', 2, 'blog2')"> Read More </button>
         </div>
         </section>
         <section id = "three" class = "active">
@@ -63,7 +63,7 @@
           <h1></h1>
           <h2></h2>
           <p></p>
-          <button class = "read" onclick="specificBlog('three', 3, 'blog3')"> Read More </button>
+          <button class = "active" onclick="specificBlog('three', 3, 'blog3')"> Read More </button>
         </div>
         </section>
       </div>
