--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -7,9 +7,53 @@
 </head>
 <body>
 
-<h1>One</h1>
-<h2></h2>
-<p>Bluh</p>
+<h1>Halftime Report for 2024</h1>
+<h2>TLDR: Experiencing corporate America, reflect on the past year, and outlook for the future.</h2>
+<div class="paragraph">
+    <p>
+        Well I was really about to finish this blog a few days ago, but my terrible procrastination quite unfortunately didn't allow me to.
+        I also had to think deeper about what I exactly wanted to write about for the first piece, as you can't go wrong off the first one already.
+        This year so far has been huge in terms of personal growth and repivoting perspectives. 
+        I used to think that trying new things, especially those that you'd think that you wouldn't enjoy, were simply a waste of time. 
+        And I used to perceive that there's so much time in this life that you put off so much things on your bucket list to be done later. 
+        These recognitions all shattered one morning on my way to office as another ordinary citzen in the world of corporate America. 
+        On that train, there's just so much mindless people — whether focused on their TikToks or stared into the steel exterior of the train — that seemed to be accustomed to the status quo of their lives that others can no longer see the liveliness within their souls.
+        Passions and creativity are all eroded by the decay of time, but I wonder why everybody isn't trying to break out of the shell that they are of themselves. I might be oversensitive here to be concerned with other people, but it's truly a scary thought 
+        that at some time down later in my life, I could be joining them — could be as early as graduating MIT, which is in two years, actually. College I believe is a time where you are getting your free trial to be titled as an "adult" without all the responsibilities that comes
+        along with it. And that thought became my wake up call to pursue all my interests and make all the right/wrong decisions before life's responsibilties catches up to me. It's truly time to encourage yourself to get out of your comfort zone, make the risky decisions (a healthy and legal amount of risk, of course), and take advantage of all the opportunities.
+        Luck, in the end, is just preparedness meeting opportunities.
+    </p>
+
+    <br>
+
+    <p>
+      With that being said, I decided to review a lot of my life's key moments retrospectively with these new ideas. It now only not sparked some motivation to relearn some things I never bothered to care too much for and learn things that I've always put off as a "for later" occassion.
+    </p>
+    <p>Here's definitely a list for things to do for the rest of the year:
+    </p>
+    <ul>
+        <li>Achieve daily/weekly reading goals.</li>
+        <li>Listen to 3 albums a week across different genres.</li>
+        <li>Drink less cups of coffee in a day although it seems impossible </li>
+        <li>Don't back away from difficult problems — solve by intuition not memorization </li>
+        <li>Connect with more new interesting people while building onto relationships that are more meaningful</li>
+        <li>Always work on something that I'm interested in </li>
+    </ul>
+    <p>
+    But things don't end there. I've also came to the horrible realization that there's plenty of concepts that I think that I understand to a fair
+    extent that I can't explain to third graders. There's also plenty of concepts that I'd love to understand that are still in the back of my mind
+    waiting for me to take the first step to learn them. It's quite urgent to build up the knowledge tree more and equip myself with more tools before
+    my mind grows dull. It seems to not be too fun. 
+    </p>
+    <p>
+    Work has been quite exciting lately, and I'm more than happy to eventually learn how to optimize daily routine. Quite honestly that I'd hate to 
+    return to the rigid structure of school and be back to being part of activities that are somewhat organized. Whilst I'm not sure how much
+    I'm allowed to discuss work details, but building a machine learning architecture from scratch that works with real data while utilizing some concepts I've learned from school
+    and thinking about its design systematically relative to the grand scheme of things would be quite supposedly an rewarding experience. I'm also grateful
+    to be not debugging some random library or building an interface that'd be never be used with a horrible frontend look with atrocious backend
+    design that has no account for latency/processing times. Guess everything did work out in my favor.
+    </p>
+</div>
 
 </body>
 </html>
