--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     <section id = "knowledgebase"  class = "hidden">
       <div class="content">
         <div class="blogcontainer">
-          <div class="blogbox">
-            <h1>Still Under Development! 🚧</h1>
-          </div>
+            <iframe src="https://xmike-yyy.github.io/quartz/" width = "800", height = "800">
+            </iframe>
         </div>
       </div>
     </section>
