new knowledge link

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     <section id = "knowledgebase"  class = "hidden">
       <div class="content">
         <div class="blogcontainer">
-            <iframe src="https://xmike-yyy.github.io/quartz/" width = "800", height = "800">
+            <iframe src="https://xmike-yyy.github.io/knowledge-base/"width = "800", height = "800">
             </iframe>
         </div>
       </div>
