--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                     <div class="text">
                         <h1 id="main">Michael Sun</h1>
                         <h2 id="sub">
-                            Rising Junior studying Computer Science and
-                            Mathematics @ MIT
+                            Junior studying Computer Science and Mathematics @
+                            MIT
                         </h2>
                         <div class="header">
                             <p>Cambridge, Massachusetts 🌃</p>
@@ -57,7 +57,6 @@
             <nav>
                 <a onclick="showSection('about');">About</a>
                 <a onclick="showSection('blog');">Blogs</a>
-                <a onclick="showSection('knowledgebase');">Knowledge</a>
             </nav>
             <div class="content">
                 <section id="blog" class="hidden">
