--- a/index.html
+++ b/index.html
@@ -114,44 +114,13 @@
                                     reflection and public readings (if anyone
                                     cares). It's a cool project to learn some
                                     web development anyway. In my freetime, I'm
-                                    either trying to read more books, watching
-                                    price actions of certain stocks, racking up
-                                    my hours on Spotify, or making a cup of
-                                    coffee.
+                                    either spending time with friends, trying to
+                                    read more books, watching markets collapse
+                                    (or rocket), racking up my hours on Spotify,
+                                    making a cup of coffee, or listening to a
+                                    podcast.
                                 </h2>
                                 <h1>Books I've Been Reading</h1>
-                                <ul>
-                                    <li>
-                                        <a
-                                            href="https://math.mit.edu/~gs/linearalgebra/ila6/indexila6.html"
-                                            >Introduction to Linear Algebra
-                                            (Relearn relevant math concepts)</a
-                                        >
-                                    </li>
-                                    <li>
-                                        <a
-                                            href="https://www.amazon.com/Thinking-Fast-Slow-Daniel-Kahneman/dp/0374533555"
-                                            >Thinking, Fast and Slow (Better
-                                            Decision Making)</a
-                                        >
-                                    </li>
-                                    <li>
-                                        <a
-                                            href="https://statsthinking21.github.io/statsthinking21-core-site/"
-                                            >Statistical Thinking for the 21st
-                                            Century (I find statistics
-                                            interesting enough)</a
-                                        >
-                                    </li>
-                                    <li>
-                                        <a
-                                            href="https://www.amazon.com/Rich-Dad-Poor-Teach-Middle/dp/1612680194"
-                                            >Rich Dad Poor Dad (I enjoy
-                                            philosophical books)</a
-                                        >
-                                    </li>
-                                </ul>
-                                <h1>Books I'd Want To Read</h1>
                                 <ul>
                                     <li>
                                         <a
@@ -171,8 +140,24 @@
                                     </li>
                                     <li>
                                         <a
-                                            href="https://www.amazon.com/No-Longer-Human-Osamu-Dazai/dp/0811204812"
-                                            >No Longer Human(Hmm)</a
+                                            href="https://www.amazon.com/Rich-Dad-Poor-Teach-Middle/dp/1612680194"
+                                            >Rich Dad Poor Dad (I enjoy
+                                            philosophical books)</a
+                                        >
+                                    </li>
+                                </ul>
+                                <h1>Books I'd Want To Read</h1>
+                                <ul>
+                                    <li>
+                                        <a
+                                            href="https://www.penguinrandomhouse.com/books/734114/the-venture-mindset-by-ilya-strebulaev-and-alex-dang/"
+                                            >RThe Venture Mindset</a
+                                        >
+                                    </li>
+                                    <li>
+                                        <a
+                                            href="https://www.amazon.com/dp/006332962X"
+                                            >Hoop Atlas</a
                                         >
                                     </li>
                                 </ul>
