--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                     <li>
                                         <a
                                             href="https://www.penguinrandomhouse.com/books/734114/the-venture-mindset-by-ilya-strebulaev-and-alex-dang/"
-                                            >RThe Venture Mindset</a
+                                            >The Venture Mindset</a
                                         >
                                     </li>
                                     <li>
